--- a/youtube/templates/hello/youtube.html
+++ b/youtube/templates/hello/youtube.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html> 
 <html> 
+<head>
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+</head>
 <body> 
 
 <h1>Youtube video downloader</h1> 
 
-
-<form action="" method="post"> 
-{% csrf_token %} 
-
-<label for="link">Enter URL:</label> 
-<input type="text" id="link" name="link" required><br><br> 
-<input type="submit" value="Submit"> 
-</form> 
-
+<form action="" method="post">
+    {% csrf_token %} 
+<div class="w-full max-w-xs">
+    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+      <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
+          Youtube URL
+        </label>
+        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="link" name="link" type="text" placeholder="Enter YouTube URL" required>
+      </div>
+      
+      <div class="flex items-center justify-between">
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+          Submit
+        </button>
+      </div>
+    </form>
+    
+  </div>
+</form>
 </body> 
 </html>
